<resources>
    <string name="app_name">Control De Visitas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">User</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_email">E-mail</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_create_user">Create user</string>
    <string name="action_create_success">User created successfully!</string>
    <string name="action_create_failed">User could not be created</string>
    <string name="action_register_failed">User data could not be registered</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_user">Add new user</string>
    <string name="title_control">Control</string>
    <string name="title_of">of</string>
    <string name="title_visits">Visits</string>
    <string name="register_visitor">Register a visitor</string>
    <string name="query_for_visits">Query for visits</string>
    <string name="visitor_name">Visitor name</string>
    <string name="str_floor">Floor</string>
    <string name="require_parking">Require parking slot</string>
    <string name="purpose_of_visit">Purpose of visit</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_time">Time</string>
    <string name="action_register_success">Visitor register updated successfully</string>
    <string name="loremipsum">Lorem Ipsum Dolor Sit Amet</string>
    <string name="lbl_date">Date of visit</string>
    <string name="lbl_to">To</string>
    <string name="lbl_from">From</string>
    <string name="lbl_visitor">Visitor</string>
    <string name="lbl_no_visitor_registered">No Visitor registered</string>
</resources>